<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="Update.Fragment_Update_4_Race">

    <TextView
        android:id="@+id/text_update_race"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_race"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/text_update_race_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_update_race"
        android:ems="10"
        android:hint="@string/insert_race_date"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/text_update_race_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_update_race_date"
        android:ems="10"
        android:hint="@string/insert_race_city"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/text_update_race_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_update_race_city"
        android:ems="10"
        android:hint="@string/insert_race_country"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/text_update_race_sport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_update_race_country"
        android:ems="10"
        android:hint="@string/insert_race_sport"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/text_update_player1_sport"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_update_race_sport"
        android:ems="10"
        android:hint="@string/insert_player_team_1"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/text_update_score1_sport"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_update_race_sport"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:hint="@string/insert_score_player_team_1"
        android:importantForAutofill="no"
        android:inputType="number" />

    <EditText
        android:id="@+id/text_update_player2_sport"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_update_player1_sport"
        android:ems="10"
        android:hint="@string/insert_race_player_team_2"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/text_update_score2_sport"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_update_player1_sport"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:hint="@string/insert_score_player_team_2"
        android:importantForAutofill="no"
        android:inputType="number" />

    <Button
        android:id="@+id/button_update_race_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_update_player2_sport"
        android:background="@color/green"
        android:text="@string/update_race"
        android:textColor="@color/white" />

</RelativeLayout>