<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Update.Fragment_Update_1_Sport">

    <TextView
        android:id="@+id/text_update_sport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/update_sport"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/text_update_sport_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_update_sport"
        android:ems="10"
        android:hint="@string/insert_sport_id"
        android:importantForAutofill="no"
        android:inputType="number" />

    <EditText
        android:id="@+id/text_update_sport_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_update_sport_id"
        android:ems="10"
        android:hint="@string/insert_sport_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_update_sport_name"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/spinner_update_sport_type"
        android:text="@string/select_type"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/spinner_update_sport_type"
        android:layout_width="207dp"
        android:layout_height="32dp"
        android:layout_below="@+id/text_update_sport_name"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/spinner_update_sport_gender"
        android:text="@string/select_type"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/spinner_update_sport_gender"
        android:layout_width="207dp"
        android:layout_height="32dp"
        android:layout_below="@+id/spinner_update_sport_type"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/button_update_sport_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:background="@color/green"
        android:text="@string/update_sport"
        android:textColor="@color/white" />

</RelativeLayout>