<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/grass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/dirt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:tabSelectedTextColor="@color/red"
        app:tabTextColor="@color/white">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sport" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/athlete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/athlete" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/race"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/race" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/ViewPagerQuery"
        android:layout_width="wrap_content"
        android:layout_height="545dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tablayout" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/ViewPagerInsert"
        android:layout_width="wrap_content"
        android:layout_height="545dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tablayout" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/ViewPagerUpdate"
        android:layout_width="wrap_content"
        android:layout_height="545dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tablayout" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/ViewPagerDelete"
        android:layout_width="wrap_content"
        android:layout_height="545dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tablayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
